# ECTF

./: .gitignore  README.md  Writeups_IITM.xlsx
.cargo/: config.toml
deadbeef_build/: max78000.elf
decoder/: Cargo.toml  Dockerfile  Makefile  board1.zsh  board2.zsh  board3.zsh  exec.sh  openocd.cfg  openocd.gdb  openocd1.cfg  openocd2.cfg  openocd3.cfg
decoder/.cargo/: config.toml
decoder/firmware/: Cargo.toml  build.rs  memory.x
decoder/firmware/examples/: blinky.rs  trng-rand.rs  uart-simple.rs
decoder/firmware/src/: main.rs
decoder/lib/board/: Cargo.toml
decoder/lib/board/src/: lib.rs
decoder/lib/board/src/decrypt_data/: mod.rs
decoder/lib/board/src/host_messaging/: mod.rs
decoder/lib/board/src/parse_packet/: mod.rs
decoder/lib/decrypt_data/: Cargo.toml
decoder/lib/decrypt_data/src/: lib.rs
decoder/lib/max78000fthr_hal/src/: lib.rs  uart.rs
decoder/lib/max78000fthr_hal/src/gcr/: mod.rs
decoder/lib/parse_packet/: Cargo.toml
decoder/lib/parse_packet/src/: lib.rs
decoder/lib/segtree-kdf/: Cargo.toml
decoder/lib/segtree-kdf/src/: kdf.rs  key_hasher.rs  lib.rs  params.rs  test.rs
decoder/lib/verify_hmac/: Cargo.toml
decoder/lib/verify_hmac/src/: lib.rs
decoder/tools/: remote.py
design/: pyproject.toml
design/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py
design/ectf25_design.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
secrets/: secrets.json
withnop/: max78000.elf
withoutnops/: max78000.elf
