[package]
name = "ectf"
authors = ["Abhinav I S <abhinavis2005@gmail.com>", "S Kevin Kinsey <kevinkinsey2005@gmail.com>"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m-rt = { version = "0.7.5", features = [ "set-sp", "set-vtor"] }
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
max7800x-hal = {path = "../lib/max78000fthr_hal"}
segtree-kdf = {path = "../lib/segtree-kdf"}
board = {path = "../lib/board"}
panic-halt = "1.0.0"
alloc-cortex-m = "0.4"
rand = { version = "0.8.5", default-features = false }
once_cell = { version = "1.20.2", default-features = false, features = ["critical-section"] }
linked_list_allocator = "0.10.5"
embedded-alloc = "0.6.0"
hashbrown = { version = "0.15.2", default-features = false, features = ["alloc", "default-hasher"] }
sha3 = { version = "0.10.8", default-features = false }
parse_packet = {path = "../lib/parse_packet"}

[build-dependencies]
serde_json = "1.0"
hex = "0.4.3"
# Uncomment if you want to use semihosting,
# cortex-m-semihosting = "0.5"
